# lcfm-visuals

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_globe.bat
.github/workflows/: deploy.yml
configs/: globes.toml
html/: globe_cesium.html  globe_interactive.html  globe_maplibre.html
plans/: GLOBE_VIZ_CESIUM.md  GLOBE_VIZ_PLAN.md  data.md  data_findings.md  globe_rendering.md  lcm10_enhancements.md  limb_bleed_avenues.md  wms_wmts_findings.md
scripts/: build_globe_png_html.py  dual_globe.py  globe_ortho.py  ortho_globes.py  orthographic_globe.py  rotating_globe.py
tests/: conftest.py  test_orthographic_globe.py
