[project]
name = "lcfm_globe"
authors = [
  { name="Joris Coddé" },
]
description = "Production module for the LCFM & SEN4LDN projects"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "pyvista>=0.47.1",
    "rasterio>=1.4.4",
]

[dependency-groups]
dev = [
  "ruff",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
exclude = [
  "/dist",
  "/notebooks",
  "/job_managers",
  "/scripts",
  "/bin",
  "/tests",
  "/data",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lcfm_globe"]


[tool.hatch.metadata]
root = "src"

[tool.hatch.version]
path = "src/lcfm_globe/_version.py"

[tool.uv]
package = true

[tool.hatch.scripts]
build-globe-html = "python build_globe_html.py"

[tool.isort]
profile = "black"
