[project]
name = "lcfm_globe"
authors = [
  { name="Joris Coddé" },
]
description = "Production module for the LCFM & SEN4LDN projects"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cartopy>=0.23",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "pyvista>=0.47.1",
    "rasterio>=1.4.4",
    "scipy>=1.10",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that download COG data over HTTPS (deselect with -m 'not integration')",
]


[tool.isort]
profile = "black"
